--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1,5 +1,5 @@
 /*============================================================================
-  Debut | Built with Shopify Slate
+  Small | Built with Shopify Slate
 
   Some things to know about this file:
     - Sass is compiled on Shopify's server so you don't need to convert it to CSS yourself
