Adds green background to nav items

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -2815,6 +2815,7 @@ textarea {
 }
 
 .site-nav__label {
+  background: green;
   border-bottom: 1px solid transparent;
 
   .site-nav__link--active & {
