--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2614,6 +2614,7 @@ textarea {
 }
 
 .site-nav__label {
+  background: green;
   border-bottom: 1px solid transparent;
 
   .site-nav__link--active & {
