--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1,5 +1,5 @@
 /*============================================================================
-  Small | Built with Shopify Slate
+  Debut | Built with Shopify Slate
 
   Some things to know about this file:
     - Sass is compiled on Shopify's server so you don't need to convert it to CSS yourself
@@ -2614,7 +2614,6 @@ textarea {
 }
 
 .site-nav__label {
-  background: green;
   border-bottom: 1px solid transparent;
 
   .site-nav__link--active & {
